# Library-Management-System

./: .gitignore  app.py  pyproject.toml
customers/: __init__.py  controller.py  database.py  main.py  model.py  threads.py  view.py
customers/ui/: icon.qrc  icon_rc.py
customers/ui/CircularSplashScreen/: SplashScreenMain.py  splashScreenUI.ui
customers/ui/CustomWidget/: customOfferFrame.py  customOrderFrame.py
customers/ui/CustomeWidget/: customeOrderFrame.py  customerLabel.py
customers/ui/Graph/: Ui_GraphWidgetUI.py  mplMain.py
customers/ui/LoginDialog/: LoginMain.py  Ui_loginDialogUI.py  loginDialogUI.ui
customers/ui/MainUI/: mainUI.ui  ui_mainUI.py
customers/ui/OrderDialog/: orderDialogMain.py  orderDialogUI.ui  ui_orderDialogUI.py
customers/ui/PriceDialog/: PriceDialogMain.py  priceDialogUI.ui
customers/ui/ProgressBarDialog/: ProgressBarMain.py  progressBarDialogUI.ui  ui_progressBarDialogUI.py
customers/views/CircularSplashScreen/: ui_splashScreenUI.py
customers/views/CustomWidget/: customAddOfferFrame.py  customAddOrderFrame.py  customEmployeeFrame.py  customImageLabel.py
customers/views/Graph/: GraphWidgetUI.ui  mplframe.py
customers/views/LoginDialog/: view.py
customers/views/MainUI/: mainUI.ui  ui_mainUI.py  view.py
customers/views/OrderDialog/: ui_orderDialogUI.py  view.py
customers/views/PriceDialog/: priceDialogUI.ui  ui_priceDialogUI.py  view.py
customers/views/ProgressBarDialog/: view.py
